tests/security/ImplodeExplode/output.txt
ERROR: TaintedData - input.hack:4:6 - Data from a URL query string found its way to an HTML tag